--- a/src/Duda/BlogBundle/Resources/config/routing.yml
+++ b/src/Duda/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+duda_blog_post:
+    resource: "@DudaBlogBundle/Resources/config/routing/post.yml"
+    prefix:   /post
+
 duda_blog_homepage:
     path:     /
     defaults: { _controller: DudaBlogBundle:Default:index }
